--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="service-box">
           <div class="service-info">
             <i class="bx bxl-figma"></i>
-            <h4>UI / UX Design</h4>
+            <h4>Full Stack Development</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -112,7 +112,7 @@
         <div class="service-box">
           <div class="service-info">
             <i class="bx bx-code"></i>
-            <h4>FrontEnd Developmet</h4>
+            <h4>UI / UX Design</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -128,7 +128,7 @@
         <div class="service-box">
           <div class="service-info">
             <i class="bx bx-code-curly"></i>
-            <h4>Backend Development</h4>
+            <h4>AI / ML Model Development</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
